--- a/LaboOpdracht1/Source/CMakeLists.txt
+++ b/LaboOpdracht1/Source/CMakeLists.txt
@@ -4,3 +4,6 @@ project(LaboOpdracht1)
 add_executable(LaboOpdracht1 main.c)
 
 target_link_libraries(LaboOpdracht1 PJ_RPI)
+target_link_libraries(LaboOpdracht1 mariadb)
+
+install (FILES mysql.h DESTINATION include)
