--- a/LaboOpdracht1/Source/CMakeLists.txt
+++ b/LaboOpdracht1/Source/CMakeLists.txt
@@ -6,4 +6,4 @@ add_executable(LaboOpdracht1 main.c)
 target_link_libraries(LaboOpdracht1 PJ_RPI)
 target_link_libraries(LaboOpdracht1 mariadb)
 
-install (FILES mysql.h DESTINATION include)
+install (TARGETS LaboOpdracht1 DESTINATION lib)
