Added PJ_RPI.c and updated CMakeLists.txt

--- a/LaboOpdracht1/Source/CMakeLists.txt
+++ b/LaboOpdracht1/Source/CMakeLists.txt
@@ -1,9 +1,8 @@
 cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
 project(LaboOpdracht1)
 
-add_executable(LaboOpdracht1 main.c)
+add_executable(LaboOpdracht1 main.c PJ_RPI.c)
 
-target_link_libraries(LaboOpdracht1 PJ_RPI)
 target_link_libraries(LaboOpdracht1 mariadb)
 
 install (TARGETS LaboOpdracht1 DESTINATION lib)
